Porfin redirecciona entre listas de mercado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".ProductActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".MenuTenderoActivity" />
+        <activity android:name=".ShoppingListProductActivity"/>
         <activity android:name=".DetalleProductActivity"></activity>
     </application>
 
