--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:9.8.0'
     compile 'com.google.android.gms:play-services-wearable:9.8.0'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
     testCompile 'junit:junit:4.12'
 }
